Remove sea serpents and lower siren spawn rate

--- a/config/ice_and_fire.cfg
+++ b/config/ice_and_fire.cfg
@@ -319,13 +319,13 @@ all {
     I:"Spawn Sea Serpent Chance"=100
 
     # True if sea serpents are allowed to spawn [default: true]
-    B:"Spawn Sea Serpents"=true
+    B:"Spawn Sea Serpents"=false
 
     # True if siren islands are allowed to spawn [default: true]
     B:"Spawn Sirens"=true
 
     # 1 out of this number chance per chunk for generation [range: 1 ~ 10000, default: 300]
-    I:"Spawn Sirens Chance"=400
+    I:"Spawn Sirens Chance"=300
 
     # 1 out of this number chance per chunk for generation [range: 1 ~ 10000, default: 100]
     I:"Spawn Stymhphalian Bird Chance"=100
