Set render distance to 12, remove logs, remove splashes, rename modpack

--- a/manifest.json
+++ b/manifest.json
@@ -10,9 +10,9 @@
   },
   "manifestType": "minecraftModpack",
   "manifestVersion": 1,
-  "name": "Rebirth of the Night",
-  "version": "2.77.5",
-  "author": "CalaMariGold",
+  "name": "SSG's Adventures",
+  "version": "0.0.1",
+  "author": "SuperSniperGuy",
   "projectID": 338901,
   "files": [
     {
